<resources>
    <string name="app_name">Currency converter</string>
    <string name="currency_value">Value:</string>
    <string name="currency_from">From:</string>
    <string name="currency_to">To:</string>
    <string name="convert">Convert!</string>
    <string name="result">Result:</string>
    <string name="no_internet_connection">No internet connection, try again later</string>
    <string name="invalid_input_value">Invalid input value</string>
</resources>
